--- a/SendMail.yml
+++ b/SendMail.yml
@@ -10,12 +10,12 @@
   tasks:
     - name: Sending an e-mail
       mail:
-        host: smtp.gmail.com
+        host: smtp.gmail.com #You need to accept third party connection on google
         port: 465
         from: "{{ from }}"
         username: "{{ username }}"
         password: "{{ password }}"
-        to: "{{ to }}" #Rémi Salandre <remi.salandre@gmail.com>
+        to: "{{ to }}"
         subject: "{{ subject }}"
         body: "{{ body }}"
         secure: always
